# mantarray-firmware-testcode

./: .gitignore
I2CLibraryTestCode/: Packet.pde  Processing_Test.pde  TestCode.c
MagnetometerDataSchedulerTest/: TestCode.c
MagnetometerVisualizer/: MagnetometerVisualizer.java
Mantarray_Utility_Tool/: HomePageControllers.pde  MagPageControllers.pde  Mantarray_Utility_Tool.pde  Packet.pde  Packet445998514429892969.autosave  SensorPageControllers.pde  StimPageControllers.pde  changelog.txt  threads.pde
Mantarray_Utility_Tool/config/: 3 Hz.txt  CCM.txt  config.json  stim_loop_test.txt
Mantarray_Utility_Tool/plots/: 2021-11-17_14-32-59_noise_metrics.txt  2021-12-28_17-08-51_noise_metrics.txt  2022-04-20_13-07-01_noise_metrics.txt  (+5 more)
Post Processing Scripts/: Beta1DataAnalysis.py  Beta2DataAnalysis.py  DataErrorChecker.py  DataVisualizer.py  DigitalLogicAnalyzerParser.py  LogicAnalyzerParser.py  Long-ShortPostDataCaptureAnalysis.py  PIL test.py  ParseLogFileForADCResults.py  Serial Driver Checker.py  Set-Reset Plotting.py  Stim Pulse Start.py  StimCheckParser.py  StimTimingTestforUWisc.py  _adc_readings.txt  h5Converter.py  nd2totif_stack.py  test.py
Processing_Test/: Packet.pde  Processing_Test.pde  Processing_Test4754522843115239912.autosave  StimPageControllers.pde  threads.pde
RCT_firmware/: CMakeLists.txt  main.c
RCT_firmware/Inc/: defs.h
StimulatorAlgorithim/: .cproject  .gitignore  .mxproject  .project  Channel_Stimulator Debug.launch  Channel_Stimulator.ioc  Well-Voltage.csv  Well-Voltage.txt  Well_Impedance.csv  Well_Impedance.txt
Test_Code/: Packet.pde  Test_Code.pde  threads.pde
(+360 files in other folders)
